unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/zoom_app__Zoom_Webinar__c.object-meta.xml
<CustomObject>
    <description>present a Webinar on Zoom Side</description>
    <label>Zoom Webinar</label>
    <nameField>
        <displayFormat>Zoom-Webinar-{0000}</displayFormat>
        <label>Zoom Webinar Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zoom Webinars</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>