unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Add_Registrants_As_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Add_Registrants_As_Campaign_Members__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Registrants As Campaign Members</label>
    <type>Checkbox</type>
</CustomField>