unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Agenda__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Agenda__c</fullName>
    <label>Agenda</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>