unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Create_New_Lead__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Create_New_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create New Lead</label>
    <type>Checkbox</type>
</CustomField>