unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Creation_Status__c</fullName>
    <label>Creation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>