unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Google_Calendar_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Google_Calendar_Event_Id__c</fullName>
    <externalId>true</externalId>
    <label>Google Calendar Event Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>