unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Number_of_Participants__c</fullName>
    <label>Actual Number of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>