unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Password__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Password__c</fullName>
    <inlineHelpText>it will be encrypted after the record saved</inlineHelpText>
    <label>Passcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>