unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Register_Url__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Register_Url__c</fullName>
    <label>Register Url</label>
    <length>200</length>
    <type>Text</type>
</CustomField>