unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Setting_Allow_Multiple_Devices__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Setting_Allow_Multiple_Devices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Multiple Devices</label>
    <type>Checkbox</type>
</CustomField>