unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Setting_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Setting_Approval_Type__c</fullName>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatically Approval</fullName>
            </value>
            <value>
                <fullName>Manually Approval</fullName>
            </value>
            <value>
                <fullName>No Registration Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>