unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Setting_Panelists_Video_On__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Setting_Panelists_Video_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panelists Video On</label>
    <type>Checkbox</type>
</CustomField>