unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Setting_Practice_Session__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Setting_Practice_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Practice Session</label>
    <type>Checkbox</type>
</CustomField>