unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Topic__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Topic__c</fullName>
    <label>Topic</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>