unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__UUId__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__UUId__c</fullName>
    <externalId>true</externalId>
    <label>UUId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>