unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/fields/zoom_app__Webinar_Id__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Webinar_Id__c</fullName>
    <description>The Id of Webinar On Zoom Side</description>
    <label>Webinar Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>