unpackaged/main/default/objects/zoom_app__Zoom_Webinar__c/listViews/zoom_app__All.listView-meta.xml
<ListView>
    <fullName>zoom_app__All</fullName>
    <columns>NAME</columns>
    <columns>zoom_app__Topic__c</columns>
    <columns>zoom_app__Webinar_Id__c</columns>
    <columns>zoom_app__Start_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>